@@ -8,12 +8,43 @@ WriteMakefile
   (
    'NAME'               => 'Math::Roman',
    'VERSION_FROM'       => 'lib/Math/Roman.pm', # finds $VERSION
+
+   # A hash of modules that are required to run Makefile.PL itself, but not to
+   # run the distribution.
+
+   'CONFIGURE_REQUIRES' => {
+                            'ExtUtils::MakeMaker' => 6.58,
+                           },
+
+   # A hash of modules that are needed to build the module but not run it.
+
+   'BUILD_REQUIRES'     => {},
+
+   # A hash of modules that are needed to run the module.
+
    'PREREQ_PM'          => {
-                            #'ExtUtils::MakeMaker' => 6.58,
-                            'Test'                => 0,
                             'Math::BigInt'        => 1.35,
                            },
+
+   # A hash of modules that are needed to test the module but not run or build
+   # it.
+
+   'TEST_REQUIRES'      => {
+                            'Test'                => 0,
+                           },
+
    'LIBS'               => [''], # e.g., '-lm'
    'DEFINE'             => '',   # e.g., '-DHAVE_SOMETHING'
    'INC'                => '',   # e.g., '-I/usr/include/other'
+
+   'META_MERGE'         => {
+       'meta-spec' => { version => 2 },
+        resources => {
+            repository => {
+                type => 'git',
+                url  => 'https://github.com/pjacklam/p5-Math-Roman.git',
+                web  => 'https://github.com/pjacklam/p5-Math-Roman',
+            },
+        },
+    },
   );
